# app/Http/Controllers/API/AuthController.php
@@ -4,20 +4,22 @@ namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Log;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Http\Request;
 use Symfony\Component\HttpKernel\Exception\HttpException;
 use App\Models\User;
-use OpenAPI\Annotations as OA;
+use OpenApi\Annotations as OA;
 
-/**
- * Class AuthController
+/** 
+ * Class AuthController.
  * 
- * @author Jessica <jessica.422023027@civitas.ukrida.ac.id>
+ * @author Salvador <steven.422023029@civitas.ukrida.ac.id>
  */
 class AuthController extends Controller
 {
-/**  @OA\Post(
+    /**
+     * @OA\Post(
      *     path="/api/user/register",
      *     tags={"User"},
      *     summary="Register new user & get token",
@@ -37,8 +39,11 @@ class AuthController extends Controller
      *         description="Request body description",
      *         @OA\JsonContent(
      *             ref="#/components/schemas/User",
-     *             example={"name": "Trixie Christy Sumantri", "email": "trix.chris.sum@gmail.com","password": "Pass123", 
-     *                      "password_confirmation": "Pass123"}
+     *             example={"name": "Steven Salvador Paembonan",
+     *                      "email": "salvador@gmail.com",
+     *                      "password": "sal12345",
+     *                      "password_confirmation": "sal12345"
+     *                     }
      *         ),
      *     )
      * )
@@ -46,18 +51,23 @@ class AuthController extends Controller
     public function register(Request $request)
     {
         try {
+            Log::info('Register Request Data: ', $request->all());
+
             $validator = Validator::make($request->all(), [
                 'name' => 'required|string|max:255',
                 'email' => 'required|string|email|max:255|unique:users',
                 'password' => 'required|string|min:6|confirmed',
             ]);
+
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->messages()->first());
             }
+
             $request['password'] = Hash::make($request['password']);
             $request['remember_token'] = \Illuminate\Support\Str::random(10);
             $user = User::create($request->toArray());
             $token = $user->createToken('All Yours')->accessToken;
+
             return response()->json(
                 array('name' => $request->name, 'email' => $request->get('email'), 'token' => $token),
                 200 
@@ -67,96 +77,107 @@ class AuthController extends Controller
         }
     }
 
-/**
- * @OA\Post(
- *      path="/api/user/login",
- *      tags={"user"},
- *      summary="log in to existing user & get token",
- *      operationId="login",
- *      @OA\Response(
- *          response=400,
- *          description="Invalid input",
- *          @OA\JsonContent()
- *      ),
- *      @OA\Response(
- *          response=201,
- *          description="Successful",
- *          @OA\JsonContent()
- *      ),
- *      @OA\RequestBody(
- *          required=true,
- *          description="Request body description",
- *          @OA\JsonContent(
- *              ref="#/components/schemas/User",
- *              example={"email": "trix.chris.sum@gmail.com","password": "Pass123"}
- *          ),
- *      )
- * )
- */
-public function login(Request $request){
-    try{
-        $validator = Validator::make($request->all(), [
-            'email' => 'required|string|email|max:255',
-            'password' => 'required|string|min:6',
-        ]);
-        if ($validator->fails()){
-            throw new HttpException(400, $validator->messages()->first());
-        }
-        $user = User::where('email',$request->email)->first();
-        if ($user){
-            if (Hash::check($request->password, $user->password)){
-                $token = $user->createToken('All Yours')->accessToken;
-                return response()->json(
-                    array('email'=>$request->get('email'), 'token' =>$token),
-                    200
-                );
-            } else{
-                return response()->jason(array('message'=>'Password mismatch'), 400);
-            }
-        } else {
-            return response()->json(array('message'=>'User does not exist'), 400);
-        }
-    } catch(\Exception $exception) {
-        throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
-    }
-}
+    /**
+     * @OA\Post(
+     *     path="/api/user/login",
+     *     tags={"User"},
+     *     summary="Log in to existing user & get token",
+     *     operationId="login",
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Request body description",
+     *         @OA\JsonContent(
+     *             ref="#/components/schemas/User",
+     *             example={"email": "salvador@gmail.com",
+     *                      "password": "sal12345",
+     *                     }
+     *         ),
+     *     )
+     * )
+     */
+    public function login(Request $request)
+    {
+        try {
+            Log::info('Login Request Data: ', $request->all());
 
-/**
- * @OA\Post(
- *      path="/api/user/logout",
- *      tags={"user"},
- *      summary="log out & destroy self token",
- *      operationId="logout",
- *      @OA\Response(
- *          response=400,
- *          description="Invalid input",
- *          @OA\JsonContent()
- *      ),
- *      @OA\Response(
- *          response=201,
- *          description="Successful",
- *          @OA\JsonContent()
- *      ),
- *      @OA\Parameter(
- *          name="email",
- *          in="path",
- *          description="User Email",
- *          required=true,
- *          @OA\Schema(
- *              type="string",
- *          )
- *      ),
- *      security={{"passport_token_ready":{}, "passport":{}}}
- * )
- */
- public function logout (Request $request){
-    try {
-        $token = $request->user()->token();
-        $token->revoke();
-        return response()->json(array('message'=>'Successfully logged out!'),
-        200);
-    } catch(\Exception $exception) {
-        throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
+            $validator = Validator::make($request->all(), [
+                'email' => 'required|string|email|max:255',
+                'password' => 'required|string|min:6',
+            ]);
+
+            if ($validator->fails()) {
+                throw new HttpException(400, $validator->messages()->first());
+            }
+
+            $user = User::where('email', $request->email)->first();
+            if ($user) {
+                if (Hash::check($request->password, $user->password)) {
+                    $token = $user->createToken('All Yours')->accessToken;
+
+                    return response()->json(
+                        array('email' => $request->get('email'), 'token' => $token),
+                        200
+                    );
+                } else {
+                    return response()->json(array('message' => 'Password mismatch'), 400);
+                }
+            } else {
+                return response()->json(array('message' => 'User does not exist'), 400);
+            }
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
+        }
     }
- }
+
+    /**
+     * @OA\Post(
+     *     path="/api/user/logout",
+     *     tags={"User"},
+     *     summary="Log out & destroy self token",
+     *     operationId="logout",
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Parameter(
+     *         name="email",
+     *         in="path",
+     *         description="User Email",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     security={{"passport_token_ready":{},"passport":{}}}
+     * )
+     */
+    public function logout(Request $request)
+    {
+        try {
+            Log::info('Logout Request Data: ', $request->all());
+
+            $token = $request->user()->token();
+            $token->revoke();
+
+            return response()->json(array('message' => 'You have been successfully logged out!'), 200);
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
+        }
+    }
 }
