# app/Http/Controllers/Controller.php
@@ -1,25 +1,25 @@
 <?php
 
 namespace App\Http\Controllers;
+
 use OpenApi\Annotations as OA;
 
 /**
  * @OA\Info(
  *      version="1.0",
  *      title="My Rest API",
- *      description="Laravel project to practice developing Rest API with L5 Swagger OpenAPI",
+ *      description="Laravel project to practice developing Rest API with L5 Swagger OpenApi",
+ *      @OA\Contact(
+ *          name="Salvador UKRIDA",
+ *          email="steven.422023029@civitas.ukrida.ac.id"
+ *      ),
  *      x={
  *          "logo": {
- *              "url": "https://miro.medium.com/v2/resize:fit:1200/1*J3G3akaMpUOLegw0p0qthA.png"
+ *              "url": "https://www.google.com/imgres?q=herry%20potter&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fid%2Fthumb%2F2%2F21%2FDaniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg%2F800px-Daniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg&imgrefurl=https%3A%2F%2Fid.wikipedia.org%2Fwiki%2FHarry_Potter_(karakter)&docid=9UWRaCjrherILM&tbnid=fZ-Ap1wkarnKpM&vet=12ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA..i&w=800&h=1067&hcb=2&ved=2ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA"
  *          }
- *      },
- *      @OA\Contact(
- *          name="Jessica Alexander",
- *          email="jessica.422023027@civitas.ukrida.ac.id"
- *      ),
+ *      }
  * )
  */
 abstract class Controller
 {
-
 }
