# storage/api-docs/api-docs.json
@@ -2,21 +2,21 @@
     "openapi": "3.0.0",
     "info": {
         "title": "My Rest API",
-        "description": "Laravel project to practice developing Rest API with L5 Swagger OpenAPI",
+        "description": "Laravel project to practice developing Rest API with L5 Swagger OpenApi",
         "contact": {
-            "name": "Jessica Alexander",
-            "email": "jessica.422023027@civitas.ukrida.ac.id"
+            "name": "Salvador UKRIDA",
+            "email": "steven.422023029@civitas.ukrida.ac.id"
         },
         "version": "1.0",
         "x-logo": {
-            "url": "https://miro.medium.com/v2/resize:fit:1200/1*J3G3akaMpUOLegw0p0qthA.png"
+            "url": "https://www.google.com/imgres?q=herry%20potter&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fid%2Fthumb%2F2%2F21%2FDaniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg%2F800px-Daniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg&imgrefurl=https%3A%2F%2Fid.wikipedia.org%2Fwiki%2FHarry_Potter_(karakter)&docid=9UWRaCjrherILM&tbnid=fZ-Ap1wkarnKpM&vet=12ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA..i&w=800&h=1067&hcb=2&ved=2ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA"
         }
     },
     "paths": {
         "/api/user/register": {
             "post": {
                 "tags": [
-                    "user"
+                    "User"
                 ],
                 "summary": "Register new user & get token",
                 "operationId": "register",
@@ -29,10 +29,10 @@
                                 "$ref": "#/components/schemas/User"
                             },
                             "example": {
-                                "name": "Trixie Christy Sumantri",
-                                "email": "trix.chris.sum@gmail.com",
-                                "password": "Pass123",
-                                "password_confirmation": "Pass123"
+                                "name": "Steven Salvador Paembonan",
+                                "email": "salvador@gmail.com",
+                                "password": "sal12345",
+                                "password_confirmation": "sal12345"
                             }
                         }
                     }
@@ -60,9 +60,9 @@
         "/api/user/login": {
             "post": {
                 "tags": [
-                    "user"
+                    "User"
                 ],
-                "summary": "log in to existing user & get token",
+                "summary": "Log in to existing user & get token",
                 "operationId": "login",
                 "requestBody": {
                     "description": "Request body description",
@@ -73,8 +73,8 @@
                                 "$ref": "#/components/schemas/User"
                             },
                             "example": {
-                                "email": "trix.chris.sum@gmail.com",
-                                "password": "Pass123"
+                                "email": "salvador@gmail.com",
+                                "password": "sal12345"
                             }
                         }
                     }
@@ -102,9 +102,9 @@
         "/api/user/logout": {
             "post": {
                 "tags": [
-                    "user"
+                    "User"
                 ],
-                "summary": "log out & destroy self token",
+                "summary": "Log out & destroy self token",
                 "operationId": "logout",
                 "parameters": [
                     {
@@ -150,6 +150,58 @@
                 ],
                 "summary": "Display a listing of the items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_publisher",
+                        "in": "query",
+                        "description": "search by publisher like name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "sort by field",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful",
@@ -180,7 +232,7 @@
                                 "author": "Inge Tumiwa-Bachrens",
                                 "publisher": "Kawan Pustaka",
                                 "publication_year": "2016",
-                                "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
+                                "cover": "https://images-na.ssl-images-amazon.com/images/5/compressed.photo.goodreads.com/books/14821780551/33511107.jpg",
                                 "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
                                 "price": 85000
                             }
@@ -213,7 +265,7 @@
                 ]
             }
         },
-        "/api/book/{id}": {
+        "/api/books/{id}": {
             "get": {
                 "tags": [
                     "book"
@@ -290,8 +342,8 @@
                                 "author": "Inge Tumiwa-Bachrens",
                                 "publisher": "Kawan Pustaka",
                                 "publication_year": "2016",
-                                "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
-                                "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
+                                "cover": "https://images-na.ssl-images-amazon.com/images/5/compressed.photo.goodreads.com/books/14821780551/33511107.jpg",
+                                "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu sehat bagi tubuh kita.",
                                 "price": 85000
                             }
                         }
@@ -399,11 +451,6 @@
             "User": {
                 "title": "User model",
                 "description": "User model",
-                "required": [
-                    "name",
-                    "email",
-                    "password"
-                ],
                 "xml": {
                     "name": "User"
                 }
@@ -419,7 +466,7 @@
             },
             "passport": {
                 "type": "oauth2",
-                "description": "Laracel passport oauth2 security.",
+                "description": "Laravel passport oauth2 security.",
                 "in": "header",
                 "scheme": "https",
                 "flows": {
